--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,15 @@
     <script type="text/javascript" src="js/comportamento.js"></script>
     <title>SHOW DO MILHAO</title>
 </head>
+
 <body>
-    
+
     <main>
         <fieldset>
             <legend>
                 <img src="img/logo.jpg">
             </legend>
-            <section id="comecar"> 
+            <section id="comecar">
                 <button id="btn-comecar">Começar a Jogar!</button>
             </section>
             <section id="lista-perguntas">
@@ -32,28 +34,67 @@
 
                             <li>
                                 <lable>
-                                    <span>1</span> <input type="radio" name="pergunta1000" value="1" />
+                                    <span>2</span> <input type="radio" name="pergunta1000" value="2" />
                                     SANTA CATARINA
                                 </lable>
                             </li>
 
                             <li>
                                 <lable>
-                                    <span>1</span> <input type="radio" name="pergunta1000" value="1" />
+                                    <span>3</span> <input type="radio" name="pergunta1000" value="3" />
                                     ESPIRITO SANTO
                                 </lable>
                             </li>
 
                             <li>
                                 <lable>
-                                    <span>1</span> <input type="radio" name="pergunta1000" value="1" />
+                                    <span>4</span> <input type="radio" name="pergunta1000" value="4" />
                                     PARAÍBA
                                 </lable>
                             </li>
                         </ul>
+                        <button type="submit">VALENDO 1000</button>
+                    </form>
+                </div>
+
+                <div id="pergunta2000" class="pergunta">
+                    <form id="form-pergunta2000">
+                        <p>De quem é a frase "penso, logo existo?</p>
+                        <ul>
+                            <li>
+                                <lable>
+                                    <span>1</span> <input type="radio" name="pergunta2000" value="1" />
+                                    Platão
+                                </lable>
+                            </li>
+
+                            <li>
+                                <lable>
+                                    <span>2</span> <input type="radio" name="pergunta2000" value="2" />
+                                    Júlio Verne
+                                </lable>
+                            </li>
+
+                            <li>
+                                <lable>
+                                    <span>3</span> <input type="radio" name="pergunta2000" value="3" />
+                                    Aristóteles
+                                </lable>
+                            </li>
+
+                            <li>
+                                <lable>
+                                    <span>4</span> <input type="radio" name="pergunta2000" value="4" />
+                                    René Descartes
+                                </lable>
+                            </li>
+                        </ul>
+                        <button type="submit">VALENDO 2000</button>
+                    </form>
+                </div>
             </section>
         </fieldset>
     </main>
-
+    <audio id="sivio-santos">
 </body>
 </html>
